tests/apigateway/apigatewayvpclink/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apigatewayvpclink
